# boblight-enigma2

./: Makefile  config.h  config.h.in  config.status  configure  configure.ac  libtool  make_mipsel.sh  start.sh
PythonPlugin/etc/init.d/: boblight-control  makeboblight.sh
PythonPlugin/usr/lib/enigma2/python/Plugins/Extensions/Boblight-enigma2/: __init__.py  boblight.py  keymap.xml  plugin.py
PythonPlugin/usr/lib/enigma2/python/Plugins/Extensions/Boblight-enigma2/locale/de/LC_MESSAGES/: Boblight.mo
PythonPlugin/usr/lib/enigma2/python/Plugins/Extensions/Boblight-enigma2/locale/nl/LC_MESSAGES/: Boblight.mo
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
last-build/lib/: libboblight.la  libboblight.so.0.0.0
src/: Makefile  Makefile.am  Makefile.in  client.cpp  config.h  configuration.h  light.cpp  main.cpp
src/.deps/: boblight-chase.Po  boblight-constant.Po  boblight-enigma2.Po  boblight-grab.Po  client.Po  condition.Po  configuration.Po  device.Po  devicedioder.Po  deviceibelight.Po  deviceltbl.Po  devicepopen.Po  devicers232.Po  flagmanager-chase.Po  flagmanager-constant.Po  flagmanager-enigma2.Po  flagmanager-grab.Po  flagmanager.Po  grabber-base.Po  grabber-enigma2.Po  grabber-getimage.Po  libboblight_la-boblight-client.Plo  libboblight_la-boblight.Plo  libboblight_la-boblight_client.Plo  libboblight_la-messagequeue.Plo  libboblight_la-misc.Plo  libboblight_la-tcpsocket.Plo  libboblight_la-thread.Plo  light.Po  log.Po  main.Po  messagequeue.Po  misc.Po  mutex.Po  serialport.Po  signaltimer.Po  tcpsocket.Po  thread.Po  threads.Po  timer.Po  (+1 more)
src/clients/: flagmanager.cpp  flagmanager.h
src/clients/boblight-chase/: boblight-chase.cpp  flagmanager-chase.cpp  flagmanager-chase.h
src/clients/boblight-constant/: boblight-constant.cpp
src/clients/boblight-constant/.svn/: all-wcprops  entries
src/clients/boblight-enigma2/: boblight-enigma2  boblight-enigma2.cpp  boblight-enigma2.cpp~  compile  flagmanager-enigma2.cpp  flagmanager-enigma2.h  grabber-enigma2.cpp  grabber-enigma2.cpp~  grabber-enigma2.h
src/device/: device.cpp
src/lib/: boblight-functions.h  boblight.cpp  boblight_client.cpp  boblight_client.h  boblight_client2.cpp  options.h  thread.cpp  thread.h
